--- a/template.yml
+++ b/template.yml
@@ -1,39 +1,25 @@
-name: Deploy backend to AWS
+AWSTemplateFormatVersion: '2010-09-09'
+Transform: AWS::Serverless-2016-10-31
+Description: Serverless backend for Cloud Resume Challenge
 
-on:
-  push:
-    branches:
-      - main
-
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.9'
-
-      - name: Install AWS SAM CLI
-        uses: aws-actions/setup-sam@v2
-
-      - name: Set up AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-      - name: Deploy with SAM
-        run: |
-          sam build
-          sam deploy --no-confirm-changeset --no-fail-on-empty-changeset --stack-name cloud-resume-backend --capabilities CAPABILITY_IAM
+Resources:
+  UpdateVisitorCountFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      FunctionName: UpdateVisitorCountFunction
+      Handler: app.lambda_handler
+      Runtime: python3.11
+      CodeUri: .
+      Policies:
+        - AWSLambdaBasicExecutionRole
+        - DynamoDBCrudPolicy:
+            TableName: VisitorCount
+      Environment:
+        Variables:
+          TABLE_NAME: VisitorCount
+      Events:
+        UpdateVisitorCount:
+          Type: Api
+          Properties:
+            Path: /updatevisitorcount
+            Method: GET
